ends of curves - caps & twist not good #36420

Closed
opened 2013-08-09 08:27:07 +02:00 by Alexander N. · 7 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit,

- Blender version with error, and version that worked ---

svn rev58997 - with issues

- Short description of error ---

issue is related to fix [#36007] "ends of curves do not fit" - thank you Sergey Sharybin and Brecht Van Lommel to fix that issue.
but now there are two new issues with this.

  1. new issue: the fill cap is not working anymore with this fix [#36007]. not all ends has a cap.

  2. depending on the location of the entire curve the twist of the ens of curve will flip badly.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      open the attached blend file,
      go to edit mode of the curve,
      move the entire curve slightly,

take also a look to the caps of that curve.

to see the difference, i attached one video if the svn (that has the issue), and one video of the official 2.68a relese (without this issue).
%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, - Blender version with error, and version that worked --- svn rev58997 - with issues - Short description of error --- issue is related to fix [#36007] "ends of curves do not fit" - thank you Sergey Sharybin and Brecht Van Lommel to fix that issue. but now there are two new issues with this. 1. new issue: the fill cap is not working anymore with this fix [#36007]. not all ends has a cap. 2. depending on the location of the entire curve the twist of the ens of curve will flip badly. - Steps for others to reproduce the error (preferably based on attached .blend file) --- open the attached blend file, go to edit mode of the curve, move the entire curve slightly, take also a look to the caps of that curve. to see the difference, i attached one video if the svn (that has the issue), and one video of the official 2.68a relese (without this issue). %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%i uploaded the same blend file with longer normals in the view-port, to see the curve-alignment better (curve endpoint flip v1.blend).%%%

%%%i uploaded the same blend file with longer normals in the view-port, to see the curve-alignment better (curve endpoint flip v1.blend).%%%

%%%Fixed in svn rev59080. Thanks for the report, closing.%%%

%%%Fixed in svn rev59080. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%only the fill caps seems to be fixed.
i opened [#36461] ends of curves - twist still not good%%%

%%%only the fill caps seems to be fixed. i opened [#36461] ends of curves - twist still not good%%%

%%%Im not sure if this is the same problem or should i submit another report ?
http://www.pasteall.org/pic/show.php?id=57532

the twist on the right side its at the end of the deforming curve.

i didnt upload the image neither the blend file because i wasn't sure if it was the same bug and i didn't want to upload trash files.
If it is necessary ill add those files to the report. %%%

%%%Im not sure if this is the same problem or should i submit another report ? http://www.pasteall.org/pic/show.php?id=57532 the twist on the right side its at the end of the deforming curve. i didnt upload the image neither the blend file because i wasn't sure if it was the same bug and i didn't want to upload trash files. If it is necessary ill add those files to the report. %%%

%%%i just download a build from builder.blender.org

Rv59147

It seems to work fine. Sorry too many builds and things at work. Keep testing.%%%

%%%i just download a build from builder.blender.org Rv59147 It seems to work fine. Sorry too many builds and things at work. Keep testing.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36420
No description provided.