Fix #36420: ends of curves - caps & twist not good

Forgot to calculate directions of first/last points
for NURBS and POLY splines.